src/main/java/com/example/demo/model/error/ValidationException.java
package com.example.demo.model.error;

public class ValidationException extends RuntimeException{
    public ValidationException(String message) {
        super(message);
    }
}
